<?xml version="1.0"?>
<package>
  <name>tug_tools</name>
  <version>0.0.0</version>
  <description>The tug_tools package</description>
  <maintainer email="johannes.maurer@ist.tugraz.at">Johannes Maurer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
